--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,54 @@
+# Dependencies
 node_modules
+server/node_modules
+
+# Environment variables
+.env
+.env.local
+.env.production
+.env.*.local
+server/.env
+
+# Build output
+dist
+dist-ssr
+build
+server/dist
+
+# Logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
+
+# Editor directories
+.vscode/*
+!.vscode/extensions.json
+.idea
+*.swp
+*.swo
+*~
+.DS_Store
+
+# OS
+Thumbs.db
+
+# Testing
+coverage
+.nyc_output
+
+# Temporary files
+*.tmp
+tmp/
+temp/
+
+# Database
+*.sql
+*.sqlite
+*.db
+
+# Production
+.vercel
+.netlify
