--- a/server/package.json
+++ b/server/package.json
@@ -30,6 +30,8 @@
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
     "mysql2": "^3.11.5",
+    "node-telegram-bot-api": "^0.66.0",
+    "react-router-dom": "^7.9.6",
     "winston": "^3.17.0"
   },
   "devDependencies": {
@@ -40,6 +42,7 @@
     "@types/jsonwebtoken": "^9.0.10",
     "@types/morgan": "^1.9.9",
     "@types/node": "^22.10.2",
+    "@types/node-telegram-bot-api": "^0.64.12",
     "tsx": "^4.19.2",
     "typescript": "^5.7.2"
   }
