--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,7 @@
   "license": "ISC",
   "dependencies": {
     "@types/react-router-dom": "^5.3.3",
+    "@types/ws": "^8.18.1",
     "bcryptjs": "^2.4.3",
     "compression": "^1.7.5",
     "cors": "^2.8.5",
@@ -33,7 +34,8 @@
     "mysql2": "^3.11.5",
     "node-telegram-bot-api": "^0.66.0",
     "react-router-dom": "^7.9.6",
-    "winston": "^3.17.0"
+    "winston": "^3.17.0",
+    "ws": "^8.18.3"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
