--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/nodemailer": "^7.0.4",
     "@types/react-router-dom": "^5.3.3",
     "@types/ws": "^8.18.1",
     "bcryptjs": "^2.4.3",
@@ -33,6 +34,7 @@
     "morgan": "^1.10.0",
     "mysql2": "^3.11.5",
     "node-telegram-bot-api": "^0.66.0",
+    "nodemailer": "^7.0.11",
     "react-router-dom": "^7.9.6",
     "winston": "^3.17.0",
     "ws": "^8.18.3"
