Add SSL certificate and private key for klambot_ru
- Added __klambot_ru.full.crt containing the full certificate chain.
- Added __klambot_ru.crt for the primary certificate.
- Added __klambot_ru.key for the corresponding private key.
- Created __klambot_ru.zip to package the certificate and key files.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-      "name": "klamonline (Community)",
+      "name": "klambot.ru",
       "version": "0.1.0",
       "private": true,
       "dependencies": {
