--- a/server/package.json
+++ b/server/package.json
@@ -1,7 +1,7 @@
 {
   "name": "klam-online-server",
   "version": "1.0.0",
-  "description": "Backend server for KLAM.Online project management system",
+  "description": "Backend server for KlamBot.ru project management system",
   "main": "dist/index.js",
   "scripts": {
     "dev": "tsx watch src/index.ts",
